# anki-card-generator

./: .gitignore  README.md  pyproject.toml
docs/: ANKI_GEN_PROMPTS.md  ANKI_IMPORTING.md
prds/: enhanced-card-generation.md  multi-format-extraction.md  run-command.md  textual-ui-rewrite.md
src/anki_gen/: __init__.py  __main__.py  cli.py
src/anki_gen/cache/: __init__.py  manager.py  models.py
src/anki_gen/commands/: export.py  generate.py  parse.py  run.py  status.py
src/anki_gen/core/: content_processor.py  epub_parser.py  flashcard_generator.py  output_writer.py  parser_factory.py  pdf_parser.py
src/anki_gen/models/: __init__.py  book.py  epub.py  extraction.py  flashcard.py  output.py
src/anki_gen/tui/: __init__.py  app.py  pipeline.py  state.py  styles.tcss
src/anki_gen/tui/screens/: __init__.py  config.py  confirm.py  execute.py  file_select.py  section_select.py
src/anki_gen/tui/widgets/: __init__.py  error_dialog.py  section_table.py
